<resources>
    <string name="app_name">GrzLog</string>
    <string name="appwidget_text"> ! </string>
    <string name="title_activity_settings">Settings</string>
    <string name="messages_header">About GrzLog</string>
    <string name="extra_header">Extra</string>
    <string name="signature_summary">\nContact: grzwolf.app@gmail.com</string>
    <string name="widgetJumpInput_title">Action after tap Widget</string>
    <string name="widgetJumpInput_summary_on">Jump to input</string>
    <string name="widgetJumpInput_summary_off">Show current text</string>
    <string name="newInputPlace">New input placement</string>
    <string name="newInputBottom">Show new input at bottom</string>
    <string name="newInputTop">Show new input at top</string>
    <string name="backup_mode">Backup mode</string>
    <string name="backup_automated_in_background">Backup automated in background</string>
    <string name="backup_manually">Backup manually</string>
    <string name="BackupRestore">Backup and Restore</string>
    <string name="BackupInfo">Backup File Information</string>
    <string name="notExisting">not existing</string>
    <string name="BackupData">Backup Data now</string>
    <string name="clickToBackup">Click here to backup your data manually</string>
    <string name="RestoreData">Restore Data</string>
    <string name="clickToRestore">Click here to restore data from Backup</string>
    <string name="useGCam">Use Google camera (if installed)</string>
    <string name="sysCam">System camera</string>
    <string name="GCam">Google camera</string>
    <string name="githubGrzLog">https://github.com/grzwolf/GrzLog/tags</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="more">More</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="note">Note</string>
    <string name="clickHere">Click here</string>
    <string name="clickExecBelow">Click \'Execute GrzLog update\' below</string>
    <string name="continueQuestion">Continue ?</string>
    <string name="not_existing">- not existing -</string>
    <string name="Failure">Failure</string>
    <string name="FileNotFound">File not found</string>
    <string name="GeneratePDF">Generate PDF</string>
    <string name="GenerateRTF">Generate RTF</string>
    <string name="ShowPDF">Show PDF</string>
    <string name="PDFcreated">PDF created</string>
    <string name="RTFcreated">RTF created</string>
    <string name="success">success</string>
    <string name="PDFcouldnotbecreated">PDF could not be created.</string>
    <string name="RTFcouldnotbecreated">RTF could not be created.</string>
    <string name="ChoosePrintQuality">choose print quality.</string>
    <string name="dontShowAgain">Don\'t show again.</string>
    <string name="CleanupFiles">Cleanup orphaned files</string>
    <string name="unusedFilesDeleted">orphaned files deleted.</string>
    <string name="LockscreenReminder">Line as GrzLog reminder</string>
    <string name="Reminder">Reminder</string>
    <string name="InsertFile">Attachment</string>
    <string name="Options">What to do with the current line?</string>
    <string name="ShowReminder">Reminder Options:</string>
    <string name="created_with">created with \"</string>
    <string name="mediaFailure">[Media failure]</string>
    <string name="lastBackup">\nlast backup: \"</string>
    <string name="noBackup">-- no backup existing --</string>
    <string name="itemsEmpty">All items are empty, no backup executed.</string>
    <string name="backupData">Backup data</string>
    <string name="wantBackupData">Do you want to backup the current data to:\n\n</string>
    <string name="overWrite">\n\nThe files named above will be overwritten.</string>
    <string name="fileCreate">\n\nThe files named above will be created.</string>
    <string name="noBackupExisting">No backup file existing</string>
    <string name="restoreFromBackup">Restore from backup</string>
    <string name="restoreGrzLogData">You want to restore GrzLog data \n</string>
    <string name="fromBackup">\n\nfrom backup\n</string>
    <string name="noUndo">\n\nThis cannot be undone. Make sure, encryption password for Backup and GrzLog are identical.</string>
    <string name="backupDisappeared">Backup file not existing anymore</string>
    <string name="previewAutoCloseOff">Keep preview image open</string>
    <string name="previewAutoCloseOn">Close preview image after 3s</string>
    <string name="previewAutoClose">Preview image auto close</string>
    <string name="copiedText">Copied Text</string>
    <string name="sequenceNotAllowed">Character sequence \'[[\' is not allowed and was changed to \'((\'.</string>
    <string name="writeGrzLog">Write to GrzLog</string>
    <string name="selectFolder">Select folder</string>
    <string name="openFolder">Open</string>
    <string name="renFolder">Rename</string>
    <string name="moreSetting">Property</string>
    <string name="clearFolder">Clear content</string>
    <string name="removeFolder">Remove</string>
    <string name="moveFolderTop">Move to top</string>
    <string name="moveFolderBottom">Move to bottom</string>
    <string name="newFolder">Create a new folder</string>
    <string name="export">Export</string>
    <string name="whatTodoWithFolder">What to do with folder: \'</string>
    <string name="changeFolderName">Change folder name</string>
    <string name="clearFolderData">Clear data of folder \'</string>
    <string name="deleteFolder">Remove folder</string>
    <string name="folder">folder</string>
    <string name="folderAlreadyAtTop">Folder is already on top of the list</string>
    <string name="folderAlreadyAtBottom">Folder is already at the list bottom</string>
    <string name="folderLimit">\"\nThere is a limit of \"</string>
    <string name="folders">\" folders.\"</string>
    <string name="folderNewName">Set new folder\'s name</string>
    <string name="makeSelection">Please first make a selection.</string>
    <string name="selectedItems">selected items as text</string>
    <string name="selectedItemsAsPDF">selected items as PDF</string>
    <string name="surroundingDay">surrounding day</string>
    <string name="currentFolder">current folder</string>
    <string name="folderAsPDF">folder as PDF</string>
    <string name="folderAsRTF">folder as RTF</string>
    <string name="copyToClip">Copy to clipboard</string>
    <string name="copiedToClip">Copied to clipboard</string>
    <string name="shareSelection">Share / copy data selection</string>
    <string name="capture">[capture]</string>
    <string name="image">[image]</string>
    <string name="attachmentLink">\"Attachment link \"</string>
    <string name="notValid">\" is not valid anymore.\"</string>
    <string name="folderSetting">Folder setting</string>
    <string name="noProperty">no property</string>
    <string name="generatingRTF">Generating RTF ...</string>
    <string name="generatingPDF">Generating PDF ...</string>
    <string name="ZIPcreated">Backup created</string>
    <string name="ZIPcouldnotbecreated">Backup ZIP could not be created.</string>
    <string name="ZIPcouldnotberestored">Backup from ZIP could not be restored</string>
    <string name="ZIPrestored">Backup restored</string>
    <string name="restoreZIP">Restore from Backup</string>
    <string name="RemoveLine">Delete line</string>
    <string name="InsertLineBefore">Insert line above</string>
    <string name="InsertLineAfter">Insert line below</string>
    <string name="SelectItems">Select items dialog</string>
    <string name="InsertRow">insert line</string>
    <string name="EditRow">edit line</string>
    <string name="undo">Undo</string>
    <string name="alienFile">Try \'Import backup from a file list\'.</string>
    <string name="gcamhint">Get GCam image via \'Share\' to GrzLog.</string>
    <string name="AppMissing">No application can handle the link</string>
    <string name="JumpTo">Jump to ...</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="date">Date</string>
    <string name="WrapAround">wrapped around</string>
    <string name="unselectSearchHits">Unselect search hits</string>
    <string name="InsertNotAllowed">Insert line here is not allowed.</string>
    <string name="noCameraOp">cannot operate camera</string>
    <string name="Select">Select attachment</string>
    <string name="MediaLink">Link to Phone Gallery</string>
    <string name="MediaCopy">Copy from Phone Gallery</string>
    <string name="GrzLogLink">Link to GrzLog Gallery</string>
    <string name="Camera">Camera</string>
    <string name="exportFolder">Export folder</string>
    <string name="notYetImplemented">Not yet implemented.</string>
    <string name="video">[video]</string>
    <string name="audio">[audio]</string>
    <string name="errorRenameBakFolder">Could not rename BAK folder.</string>
    <string name="errorCreateInternalFolder">Could not create internal folder.</string>
    <string name="deleteSelectedItems">Delete selected items?</string>
    <string name="deleteSelectedItemsFromApp">Delete selected items from GrzLog gallery?</string>
    <string name="whatToDoWithItems">What to do with selection?</string>
    <string name="unselectAll">Unselect all</string>
    <string name="selectAll">Select all</string>
    <string name="copyToClipboard">Copy to clipboard</string>
    <string name="deleteFromList">Delete selection from list</string>
    <string name="deleteSelection">" deleted selection"</string>
    <string name="pickImage">Select Image</string>
    <string name="invertSelection">Invert selection</string>
    <string name="tryingTxtAppData">No app data found, trying local restore.</string>
    <string name="tryingTxtBackupData">No app data found, trying /Download restore.</string>
    <string name="noAppDataFound">No app data were found.\n\nExecute Restore or Import from Settings.</string>
    <string name="importBackup">Import backup from a file list</string>
    <string name="clickToImport">Click here to import data from a file list</string>
    <string name="resetAppPreferences">Reset app preferences</string>
    <string name="resetAppPreferencesSummary">Reset preferences, data are not affected.</string>
    <string name="tidyOrphanes">Tidy orphaned attachments</string>
    <string name="appHelp">Help pages</string>
    <string name="openLinksInBrowser">Open text links with browser</string>
    <string name="askAutoFillSkippedDates">Ask to auto fill skipped dates</string>
    <string name="askNever">never ask</string>
    <string name="askAlways">always ask</string>
    <string name="useBackupReminder">Backup outdated reminder</string>
    <string name="background">in background</string>
    <string name="clickSelectedItemsToClipboard">Click on selection</string>
    <string name="showLink">show attachment</string>
    <string name="copyClipboard">copy to clipboard</string>
    <string name="clickSearchHitToEdit">Click on search hit</string>
    <string name="synchronization_off">Synchronization == OFF</string>
    <string name="synchronization_is_enabled">Synchronization is enabled</string>
    <string name="device_visibility_check_it_after_being_told">device visibility: check it, after being told</string>
    <string name="connection_status">connection status</string>
    <string name="select_remote">Select Remote</string>
    <string name="send_folder">Send Folder</string>
    <string name="request_folder">Request Folder</string>
    <string name="send_message">Send Message</string>
    <string name="type_here">.. type here ..</string>
    <string name="auto_connect">Auto connect last device</string>
</resources>