<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="120dp"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/checkbox_auto_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:text="@string/auto_connect" />

    <ToggleButton
        android:id="@+id/toggle_onoff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="8dp"
        android:textAllCaps="false"
        android:background="@color/lightskyblue"
        android:textOff="@string/synchronization_off"
        android:textOn="@string/synchronization_is_enabled" />

    <CheckBox
        android:id="@+id/checkbox_device_visibility"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:text="@string/device_visibility_check_it_after_being_told" />

    <TextView
        android:id="@+id/textview_connection_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:text="@string/connection_status" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_select_remote"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingStart="4dp"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:background="@color/lightskyblue"
            android:text="@string/select_remote" />

        <TextView
            android:id="@+id/textview_remote_device"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:background="@color/white"
            android:text="" />
    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_send_file"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingStart="4dp"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:background="@color/lightskyblue"
            android:text="@string/send_folder" />

        <Button
            android:id="@+id/button_request_file"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingStart="4dp"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:background="@color/lightskyblue"
            android:text="@string/request_folder" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textview_request_file"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_margin="10dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:background="@color/white"
            android:text="" />

    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_send_text"
            android:layout_width="0dp"
            android:layout_weight="1.1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:paddingStart="4dp"
            android:textAllCaps="false"
            android:textSize="12sp"
            android:background="@color/lightskyblue"
            android:text="@string/send_message" />

        <EditText
            android:id="@+id/editText_send_text"
            android:layout_width="0dp"
            android:layout_weight="1.9"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="10dp"
            android:gravity="left"
            android:padding="8dp"
            android:inputType="text"
            android:textColor="@color/black"
            android:background="@color/white"
            android:selectAllOnFocus="true"
            android:text="@string/type_here" />
    </LinearLayout>


</LinearLayout>